bk_ida/gccida/c3/get_attr_modrm
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16559:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16562:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16573:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16575:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 16766, "get_attr_modrm"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16575:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 16766, "get_attr_modrm"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16740:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v4 = recog_data_0.operand[1]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16747:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v4 = recog_data_0.operand[0]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16767:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v5 = recog_data_0.operand[1]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16810:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !register_operand( recog_data_0.operand[0], VOIDmode) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16813:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !immediate_operand( recog_data_0.operand[1], VOIDmode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16826:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( q_regs_operand( recog_data_0.operand[0], QImode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16849:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v5 = recog_data_0.operand[1]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16862:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !memory_operand( recog_data_0.operand[1], VOIDmode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16904:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return !register_operand( recog_data_0.operand[1], SImode) && !register_operand( recog_data_0.operand[1], HImode); 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16904:82: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return !register_operand( recog_data_0.operand[1], SImode) && !register_operand( recog_data_0.operand[1], HImode); 
                                                                                 ^~~~~~~~~~~~
                                                                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16911:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], DImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16913:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return !register_operand( recog_data_0.operand[1], SImode) && !register_operand( recog_data_0.operand[1], HImode); 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16913:82: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return !register_operand( recog_data_0.operand[1], SImode) && !register_operand( recog_data_0.operand[1], HImode); 
                                                                                 ^~~~~~~~~~~~
                                                                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/insn-attrtab.c:16921:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], SImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_modrm/src/obj/insn-attrtab.o] Error 1
